--- a/assets/sass/_listings.scss
+++ b/assets/sass/_listings.scss
@@ -16,6 +16,7 @@ header{
       text-transform: capitalize;
       font-weight: 300;
       font-size: .9rem;
+    
 
       &:hover{
         color: #ff718e;
@@ -27,6 +28,12 @@ header{
         text-align: center;
         color: #fff;
         border-radius: 5px;
+      }
+    }
+
+    @media screen and (max-width: 900px) {
+      a{
+        padding: 7px 6px;
       }
     }
   }
